[package]
name = "cs"
version = "0.2.0"
edition = "2021"
description = "Claude Code Session Manager - deterministic sessions based on folder+branch"
repository = "https://github.com/bikramtuladhar/claude-code-resumer"
license = "MIT"
keywords = ["claude", "cli", "session", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
